--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" style="width: 100%; height: 100%;">
+<html lang="en" style="width: 100%; height: 100%">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/ico" href="/icon.ico" />
@@ -7,8 +7,8 @@
     <title>SaveSentry</title>
   </head>
 
-  <body style="width: 100%; height: 100%;">
-    <div id="root" style="width: 100%; height: 100%;"></div>
+  <body style="width: 100%; height: 100%">
+    <div id="root" style="width: 100%; height: 100%"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
